refractoring crm controllers

--- a/application/pages/crm/view/view.html
+++ b/application/pages/crm/view/view.html
@@ -45,7 +45,7 @@
             {% endfor %}
         </tr>
         <tbody>
-            {% for k in orgs %}
+            {% for k in table %}
             <tr>
                 <td class="checkbox"><input data-index="0" name="btSelectItem" type="bs-checkbox"></td>
                 {% for i in columns %}
